--- a/app/src/main/resources/main.fxml
+++ b/app/src/main/resources/main.fxml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="ehu.isad.controllers.ui.MainKud"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ehu.isad.controllers.ui.MainKud">
+   <children>
+      <ComboBox fx:id="cmbx" layoutX="209.0" layoutY="303.0" prefWidth="150.0" />
+      <TableView fx:id="tbl" layoutX="184.0" layoutY="51.0" prefHeight="200.0" prefWidth="200.0">
+        <columns>
+          <TableColumn fx:id="clmn1" prefWidth="75.0" text="C1" />
+          <TableColumn fx:id="clmn2" prefWidth="75.0" text="C2" />
+            <TableColumn fx:id="clmn3" prefWidth="75.0" text="Column X" />
+        </columns>
+      </TableView>
+      <Button fx:id="btn" layoutX="400.0" layoutY="303.0" mnemonicParsing="false" onAction="#onClick" text="Button" />
+   </children>
 </AnchorPane>
