--- a/app/src/main/resources/bigarrena.fxml
+++ b/app/src/main/resources/bigarrena.fxml
@@ -7,11 +7,12 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ehu.isad.controllers.ui.BigarrenaKud">
    <children>
-      <TextField layoutX="210.0" layoutY="163.0" prefHeight="59.0" prefWidth="167.0" text="ONDO DOA!">
+      <TextField fx:id="txt" layoutX="210.0" layoutY="163.0" prefHeight="59.0" prefWidth="167.0" text="ONDO DOA!">
          <font>
             <Font size="23.0" />
          </font>
       </TextField>
-      <Button layoutX="268.0" layoutY="244.0" mnemonicParsing="false" onAction="#onClick" text="Button" />
+      <Button fx:id="btn2" layoutX="318.0" layoutY="244.0" mnemonicParsing="false" onAction="#onClick" text=":(" />
+      <Button fx:id="btn1" layoutX="230.0" layoutY="244.0" mnemonicParsing="false" onAction="#onClick" text=":)" />
    </children>
 </AnchorPane>
