--- a/app/src/main/resources/main.fxml
+++ b/app/src/main/resources/main.fxml
@@ -1,22 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ehu.isad.controllers.ui.MainKud">
    <children>
-      <ComboBox fx:id="cmbx" layoutX="105.0" layoutY="31.0" prefWidth="150.0" />
-      <TableView fx:id="tbl" layoutX="82.0" layoutY="78.0" prefHeight="200.0" prefWidth="309.0">
+      <TableView fx:id="tbl" layoutX="75.0" layoutY="82.0" prefHeight="200.0" prefWidth="450.0">
         <columns>
-          <TableColumn fx:id="clmn1" prefWidth="75.0" text="C1" />
-          <TableColumn fx:id="clmn2" prefWidth="75.0" text="C2" />
-            <TableColumn fx:id="clmn3" prefWidth="75.0" text="Column X" />
-            <TableColumn fx:id="clmn4" prefWidth="75.0" text="Column X" />
+          <TableColumn fx:id="tblfn" prefWidth="155.0" text="Full Name" />
+          <TableColumn fx:id="tblic" minWidth="0.0" prefWidth="61.0" text="License" />
+            <TableColumn fx:id="tbldesc" prefWidth="148.0" text="Description" />
+            <TableColumn fx:id="tblop" prefWidth="85.0" text="Open Issues" />
         </columns>
       </TableView>
-      <Button fx:id="btn" layoutX="316.0" layoutY="31.0" mnemonicParsing="false" onAction="#onClick" text="Button" />
+      <Button fx:id="btn" layoutX="316.0" layoutY="31.0" mnemonicParsing="false" onAction="#onClick" text="Check" />
+      <Text layoutX="71.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Project" />
+      <TextField fx:id="text" layoutX="128.0" layoutY="31.0" />
+      <Text fx:id="mezua" layoutX="48.0" layoutY="350.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
    </children>
 </AnchorPane>
