--- a/app/src/main/resources/main.fxml
+++ b/app/src/main/resources/main.fxml
@@ -18,7 +18,7 @@
         </columns>
       </TableView>
       <Button fx:id="btn" layoutX="316.0" layoutY="31.0" mnemonicParsing="false" onAction="#onClick" text="Check" />
-      <Text layoutX="71.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Project" />
+      <Text fx:id="projectTestua" layoutX="71.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Project" />
       <TextField fx:id="text" layoutX="128.0" layoutY="31.0" />
       <Text fx:id="mezua" layoutX="48.0" layoutY="350.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
    </children>
